compiler/testData/diagnostics/testsWithJsStdLib/import/namespaceInsideFileJsImport.kt
// FIR_IDENTICAL
@file:JsImport("A")
package foo

@JsImport.Namespace
external <!JS_IMPORT_NAMESPACE_WITH_FILE_JS_IMPORT!>object Correct<!>
